test: fix updateClient_shouldReturnNoContent
change variable name from request to requestDTO for bug